snapshot-tests/tests/snapshots/parser__bad_floats__underscore_before_dot.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[InvalidFloat]: invalid float: underscores must be between two digits at a
  ┌─ underscore_before_dot:1:5
  │
1 │ a = 73_.5
  │     ^^^ invalid float: underscores must be between two digits
